Bump deps, java9, newest sqlsauce, migrate varchar to text